--- a/css/home.css
+++ b/css/home.css
@@ -86,7 +86,7 @@ main .sidebar .top p{
 }
 
 main .main{
-    width: 60%;
+    width: 55%;
     height: 100%;
     display: flex;
     align-items: center;
@@ -170,10 +170,79 @@ main .main .new-post .additional-post-info button{
 main .main .posts{
     width: 100%;
     height: 70%;
+    color: white;
+    display: flex;
+    overflow-y: scroll;
+    align-items: center;
+    flex-direction: column;
+    justify-content: flex-start;
+}
+
+main .main .posts::-webkit-scrollbar{
+    display: none;
+}
+
+main .main .posts .post{
+    gap: 30px;
+    width: 100%;
+    display: flex;
+    padding: 20px;
+    align-items: flex-start;
+    justify-content: center;
+}
+
+main .main .posts .post .user-profile .image{
+    width: 50px;
+    height: 50px;
+}
+
+main .main .posts .post .user-profile .image img{
+    width: 100%;
+    height: 100%;
+}
+
+main .main .posts .post .content{
+    gap: 15px;
+    display: flex;
+    /* align-items: center; */
+    flex-direction: column;
+    justify-content: center;
+}
+
+main .main .posts .post .content .title{
+    gap: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+}
+
+main .main .posts .post .content .info-image{
+    width: 100%;
+    height: 300px;
+    border-radius: 36px;
+}
+
+main .main .posts .post .content .info-image img{
+    height: 100%;
+    width: 100%;
+    border-radius: 36px;
+}
+
+main .main .posts .post .content .info-icons{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+main .main .posts .post .content .info-icons .comments, .likes{
+    gap: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 main .followers{
-    width: 20%;
+    width: 25%;
     height: 100%;
     display: flex;
     align-items: center;
@@ -182,7 +251,145 @@ main .followers{
     border-left: 1px solid white;
 }
 
+main .followers .search{
+    width: 100%;
+    height: 10%;
+    padding: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+main .followers .search input[type="text"]{
+    width: 80%;
+    border: none;
+    color: white;
+    padding: 10px 15px;
+    border-radius: 20px;
+    background-color: #202327;
+}
+
+main .followers .users{
+    width: 80%;
+    height: 85%;
+    display: flex;
+    color: white;
+    align-items: center;
+    border-radius: 20px;
+    flex-direction: column;
+    justify-content: center;
+    background-color: #202327;
+}
+
+main .followers .users .title{
+    height: 10%;
+    padding: 20px;
+    align-self: flex-start;
+}
+
+main .followers .users .user-container{
+    width: 100%;
+    height: 90%;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: flex-start;
+}
+
+main .followers .users .user-container .follower{
+    width: 100%;
+    padding: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+main .followers .users .user-container .follower .image{
+    width: 45px;
+    height: 45px;
+    border-radius: 50%;
+}
+
+main .followers .users .user-container .follower .image img{
+    width: 100%;
+    height: 100%;
+}
+
+main .followers .users .user-container .follower .name .icon{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+main .followers .users .user-container .follower .view-profile button{
+    border: none;
+    color: #000000;
+    padding: 5px 15px;
+    border-radius: 20px;
+    background-color: white;
+}
+
 .icon{
     color: white;
     font-weight: bold;
+}
+
+
+
+@media screen and (max-width: 1024px) {
+    main .followers{
+        display: none;
+    }
+
+    main .main{
+        width: 70%;
+    }
+
+    main .main .new-post{
+        height: 25%;
+    }
+
+    main .sidebar{
+        width: 30%;
+    }
+}
+
+
+@media screen and (max-width: 768px) {
+    main{
+        flex-direction: column-reverse;
+    }
+
+    main .main{
+        width: 100%;
+        height: 93%;
+    }
+
+    main .main .new-post{
+        height: 25%;
+    }
+
+    main .followers{
+        display: none;
+    }
+
+    main .sidebar{
+        width: 100%;
+        height: 7%;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+    }
+    main .sidebar a{
+        display: none;
+    }
+    main .sidebar .top{
+        flex-direction: row;
+    }
+    main .sidebar .top .home-link, .profile-link{
+        flex-direction: column;
+    }
+    main .sidebar .bottom .user-profile{
+        display: none;
+    }
 }
