--- a/css/home.css
+++ b/css/home.css
@@ -33,7 +33,7 @@ main .sidebar{
     align-items: center;
     flex-direction: column;
     justify-content: space-between;
-    border-right: 1px solid white;
+    border-right: 1px solid rgba(255, 255, 255, .1);
 }
 
 main .sidebar .top, .bottom{
@@ -67,8 +67,8 @@ main .sidebar .top a, .bottom a{
 main .bottom .user-profile{
     gap: 20px;
     display: flex;
-    color: white;
     padding: 20px;
+    color: white;
 }
 
 main .bottom .user-profile .image{
@@ -118,8 +118,8 @@ main .main .new-post{
     height: 20%;
     display: flex;
     flex-direction: column;
-    border-top: 1px solid white;
-    border-bottom: 1px solid white;
+    border-top: 1px solid rgba(255, 255, 255, .1);
+    border-bottom: 1px solid rgba(255, 255, 255, .1);
 }
 
 main .main .new-post .post-creation{
@@ -248,7 +248,7 @@ main .followers{
     align-items: center;
     flex-direction: column;
     justify-content: center;
-    border-left: 1px solid white;
+    border-left: 1px solid rgba(255, 255, 255, .1);
 }
 
 main .followers .search{
