--- a/css/post.css
+++ b/css/post.css
@@ -35,7 +35,7 @@ main .sidebar{
     align-items: center;
     flex-direction: column;
     justify-content: space-between;
-    border-right: 1px solid white;
+    border-right: 1px solid rgba(255, 255, 255, .1);
 }
 
 main .sidebar .top, .bottom{
@@ -104,6 +104,7 @@ main .main .hero{
     color: white;
     align-items: center;
     justify-content: space-between;
+    border-bottom: 1px solid rgba(255, 255, 255, .1);
 }
 
 main .main .post{
@@ -134,6 +135,7 @@ main .main .post .content{
     flex-direction: column;
     justify-content: center;
 }
+
 
 main .main .post .content .title{
     gap: 10px;
@@ -188,9 +190,9 @@ main .main .post-comments .new-comment .comment-creation{
     /* border-radius: 10px; */
     align-items: center;
     /* border: 1px solid white; */
-    border-top: 1px solid white;
+    border-top: 1px solid rgba(255, 255, 255, .1);
     justify-content: space-between;
-    border-bottom: 1px solid white;
+    border-bottom: 1px solid rgba(255, 255, 255, .1);
 }
 
 main .main .post-comments .new-comment .comment-creation .left, .right{
@@ -289,7 +291,7 @@ main .followers{
     align-items: center;
     flex-direction: column;
     justify-content: center;
-    border-left: 1px solid white;
+    border-left: 1px solid rgba(255, 255, 255, .1);
 }
 
 main .followers .search{
