--- a/css/home.css
+++ b/css/home.css
@@ -27,7 +27,7 @@ main{
 }
 
 main .sidebar{
-    width: 20%;
+    width: 25%;
     height: 100%;
     display: flex;
     align-items: center;
@@ -86,7 +86,7 @@ main .sidebar .top p{
 }
 
 main .main{
-    width: 55%;
+    width: 40%;
     height: 100%;
     display: flex;
     align-items: center;
@@ -189,6 +189,7 @@ main .main .posts .post{
     padding: 20px;
     align-items: flex-start;
     justify-content: center;
+    border-bottom: 1px solid rgba(255, 255, 255, .1);
 }
 
 main .main .posts .post .user-profile .image{
@@ -213,12 +214,13 @@ main .main .posts .post .content .title{
     gap: 10px;
     display: flex;
     align-items: center;
-    justify-content: flex-start;
+    /* justify-content: flex-start; */
 }
 
 main .main .posts .post .content .info-image{
     width: 100%;
     height: 300px;
+    
     border-radius: 36px;
 }
 
@@ -242,7 +244,7 @@ main .main .posts .post .content .info-icons .comments, .likes{
 }
 
 main .followers{
-    width: 25%;
+    width: 35%;
     height: 100%;
     display: flex;
     align-items: center;
@@ -301,7 +303,7 @@ main .followers .users .user-container .follower{
     padding: 10px;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-evenly;
 }
 
 main .followers .users .user-container .follower .image{
@@ -399,3 +401,4 @@ main .followers .users .user-container .follower .view-profile button{
         display: none;
     }
 }
+
