--- a/css/home.css
+++ b/css/home.css
@@ -74,11 +74,13 @@ main .bottom .user-profile{
 main .bottom .user-profile .image{
     width: 50px;
     height: 50px;
+    border-radius: 50%;
 }
 
 main .bottom .user-profile .image img{
     width: 100%;
     height: 100%;
+    border-radius: 50%;
 }
 
 main .sidebar .top p{
@@ -140,11 +142,13 @@ main .main .new-post .post-creation input[type="text"]{
 main .main .new-post .post-creation .image{
     width: 50px;
     height: 50px;
+    border-radius: 50%;
 }
 
 main .main .new-post .post-creation .image img{
     width: 100%;
     height: 100%;
+    border-radius: 50%;
 }
 
 main .main .new-post .additional-post-info{
@@ -303,7 +307,7 @@ main .followers .users .user-container .follower{
     padding: 10px;
     display: flex;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: space-between;
 }
 
 main .followers .users .user-container .follower .image{
