--- a/css/post.css
+++ b/css/post.css
@@ -29,7 +29,7 @@ main{
 }
 
 main .sidebar{
-    width: 20%;
+    width: 25%;
     height: 100%;
     display: flex;
     align-items: center;
@@ -88,7 +88,7 @@ main .sidebar .top p{
 }
 
 main .main{
-    width: 55%;
+    width: 40%;
     height: 100%;
     display: flex;
     align-items: center;
@@ -121,16 +121,19 @@ main .main .post{
 main .main .post .user-profile .image{
     width: 50px;
     height: 50px;
+    border-radius: 50%;
 }
 
 main .main .post .user-profile .image img{
     width: 100%;
     height: 100%;
+    border-radius: 50%;
 }
 
 
 main .main .post .content{
     gap: 15px;
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -139,6 +142,7 @@ main .main .post .content{
 
 main .main .post .content .title{
     gap: 10px;
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: flex-start;
@@ -146,7 +150,7 @@ main .main .post .content .title{
 
 main .main .post .content .info-image{
     width: 100%;
-    height: 200px;
+    height: 300px;
     border-radius: 36px;
 }
 
@@ -172,8 +176,9 @@ main .main .post .content .info-icons .comments, .likes{
 main .main .post-comments{
     width: 100%;
     height: 45%;
+    padding-top: 25px;
     display: flex;
-   flex-direction: column;
+    flex-direction: column;
 }
 
 
@@ -228,6 +233,7 @@ main .main .post-comments .new-comment .comment-creation .image{
 main .main .post-comments .new-comment .comment-creation .image img{
     width: 100%;
     height: 100%;
+    border-radius: 50%;
 }
 
 main .main .post-comments .comment-list{
@@ -285,7 +291,7 @@ main .main .post-comments .comment-list .cmnt .info-icons .comments, .likes{
 }
 
 main .followers{
-    width: 25%;
+    width: 35%;
     height: 100%;
     display: flex;
     align-items: center;
