--- a/css/post.css
+++ b/css/post.css
@@ -76,11 +76,13 @@ main .bottom .user-profile{
 main .bottom .user-profile .image{
     width: 50px;
     height: 50px;
+    border-radius: 50%;
 }
 
 main .bottom .user-profile .image img{
     width: 100%;
     height: 100%;
+    border-radius: 50%;
 }
 
 main .sidebar .top p{
