--- a/css/post.css
+++ b/css/post.css
@@ -481,5 +481,100 @@ main .followers .users .user-container .follower .view-profile button{
     }
     main .main .post-comments .cmnt .profile{
         display: none;
-    }
+   }
+}   
+
+#comment-update{
+    width: 100%;
+    color: white;
+    padding: 10px 20px;
+    border-radius: 10px;
+    border: 1px solid white;
+    background-color: #000000;
+}
+
+.modal {
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: none;
+    overflow: auto;
+    position: fixed;
+    z-index: 250000;
+    background-color: rgba(0,0,0,0.7);
+}
+
+.modal-content {
+    width: 50%;
+    padding: 20px;
+    margin: 15% auto;
+    border-radius: 10px;
+    background-color: #000000;
+    border: 2px solid rgba(255, 255, 255, .1);
+}
+
+.close {
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding: 10px;
+    cursor: pointer;
+    color: white;
+    font-size: 100px;
+}
+
+main .main .new-post{
+    width: 100%;
+    height: 20%;
+    display: flex;
+    flex-direction: column;
+}
+
+main .main .new-post .post-creation{
+    gap: 20px;
+    width: 100%;
+    padding: 20px;
+    display: flex;
+    align-items: center;
+}
+
+main .main .new-post .post-creation #new-post{
+    border: none;
+    color: white;
+    padding: 10px 20px;
+    background-color: #000000;
+}
+
+main .main .new-post .post-creation .image{
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+}
+
+main .main .new-post .post-creation .image img{
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+}
+
+main .main .new-post .additional-post-info{
+    width: 100%;
+    padding: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+main .main .new-post .additional-post-info input[type="file"]{
+    display: none;
+}
+
+main .main .new-post .additional-post-info button{
+    border: none;
+    color: white;
+    cursor: pointer;
+    padding: 5px 15px;
+    border-radius: 20px;
+    background-color: #1D9BF0;
 }
