--- a/css/otherUserProfile.css
+++ b/css/otherUserProfile.css
@@ -51,6 +51,7 @@ main .sidebar .top .home-link, .profile-link, .liked-posts-link {
     display: flex;
     padding: 20px;
     align-items: center;
+    justify-content: center;
 }
 
 main .sidebar .bottom .logout{
