--- a/css/likedPosts.css
+++ b/css/likedPosts.css
@@ -49,6 +49,7 @@ main .sidebar .top .home-link, .profile-link, .liked-posts-link {
     display: flex;
     padding: 20px;
     align-items: center;
+    justify-content: center;
 }
 
 main .sidebar .bottom .logout{
@@ -393,8 +394,10 @@ main .followers .users .user-container .follower .view-profile button{
     main .sidebar .top{
         flex-direction: row;
     }
-    main .sidebar .top .home-link, .profile-link{
-        flex-direction: column;
+    main .sidebar .top .home-link, .profile-link, .liked-posts-link{
+        padding-top: 30px;
+        flex-direction: row;
+        justify-content: center;
     }
     main .sidebar .bottom .user-profile{
         display: none;
